--- a/ijndex.html
+++ b/ijndex.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     Hi
+    <p>Welcome to the gitDemoHSBC project!</p>
+    <p>This project contains various files and directories for demonstration purposes.</p>
 </body>
 </html>
